Added pictures, applied style sheet to all pages, formatted the table on "rule of thirds", made borders, etc.

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -38,7 +38,22 @@ nav ul a
 
 nav ul a:hover
 {
-    background-color: #32331D
+    background-color: #40411E
 }
 
-<!--https://color.adobe.com/Orange-on-olive-color-theme-2227/?showPublished=true -->
+img
+{
+    border-style: solid;
+    border-width: 10px;
+    border-color: #32331D;
+    padding: 10px;
+    margin: 5px;
+}
+
+table, th, td {
+    border-style: dashed;
+    border-width: 5px;
+    padding: 5px;
+    margin: 5px;
+    text-align: center;
+}
