--- a/public_html/css/stylesheet.css
+++ b/public_html/css/stylesheet.css
@@ -1,62 +1,141 @@
-<!-- I claim this file in the name of Tyler Godfrey. -->
+/* I claim this file in the name of Tyler Godfrey. */
+
+/* margin: auto    to center an element */
 
 /* tag */
 h1 {
     font-family: Gadugi, sans-serif;
     text-align: center;
     font-size: 72px;
-
+    border-style: solid;
+    border-width: 2px;
+    padding: 0px 0px 10px 0px;
+    margin: 45px auto 15px;
+    color: #D4B26A;
+    background-color: #191F58;
+    
     }
     
 body {
     font-family: Arial, sans-serif;
     text-align: left;
-    font-size: 14px;
+    font-size: 16px;
+    background-color: #FFE3AA;
+    margin: 20px;
+    padding-bottom: 60px;
     }
+
+form {
+    border-style: solid;
+    border-width: 0px;
+    margin: auto;
+}    
     
 a {
     font-family: Gadugi, sans-serif;
-    font-size: 14px;
+    font-size: 18px;
 }
 
 nav ul {
     list-style-type: none;
     margin: 0px;
-    padding: 14px;
+    padding: 0px;
     overflow: hidden;
-    background-color: #000;
+    background-color: #191F58;
     font-family: Gadugi, sans-serif;
 }
 
-nav li {
-    float: left;
+table {
+    border-color: #AA9139;
+    border-width: 4px;
     padding: 4px;
-    color: #FFF;
+    width: 320px;
+    text-align: center;
 }
 
-nav li a {
-    float: left;
+th {
+    border-color: #444;
+    border-width: 3px;
     padding: 4px;
-    color: #FFF;
 }
 
-nav li a hover {
-    float: left;
+td {
+    border-color: #444;
+    border-width: 2px;
     padding: 4px;
-    color: #777;
-    background-color: #EEE;
 }
 
-header {
-    background-color: #931a2a;
-    background-image: url("../img/Camera.png")
+footer {
+    width: 100%;
+    bottom: 0;
+    position: relative;
+    text-align: center;
+    margin: 0px;
+    height: 60px;
+}
+
+.menu li {
+    float: left;
+    padding: 0px;
+    color: #FFE3AA;
+    text-decoration: none;
+}
+
+.menu a {
+    float: left;
+    padding: 12px 20px;
+    color: #FFECAA;
+    background-color: #191F58;
+    text-decoration: none;
+}
+
+.menu a:hover {
+    float: left;
+    padding: 12px 20px;
+    color: #D4B26A;
+    background-color: #080D3B;
+    text-decoration: none;
+}
+
+#selected a {
+    color: #D4B26A;
+    background-color: #323875;
+    text-decoration: none; 
+}
+
+#login{
+    width: 260px;
+}
+
+#ruleOfThirds {
+    width: 525px;
+}
+
+#aboutUs {
+    width: 360px;
+}
+
+#cameraTutorials {
+    width: 630px;
+}
+
+#hours {
+    width: 1045px;
+}
+
+#signup {
+    width: 315px;
+}
+
+#subjectIdeas {
+    width: 950px;
 }
 
 /* id */
-#camera {
+.image {
     display: block;
-    margin: auto;
-    width: 12%;
+    margin: 35px auto;
+    
     
 }
 
